--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,26 @@
 // Import page-specific CSS files here.
 @import "home";
+
+
+#profile-picture {
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+}
+
+.w-100 {
+border-radius: 12px;
+margin-top: 1px;
+padding: 5px;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.card-background {
+  background-color: blanchedalmond;
+  border-radius: 10px;
+}
+.child-background {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: aqua;
+  
+}
