--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,5 +1,20 @@
+Request Boxes
 <div>
-<h5> New Requests </h5>
-<%= @Ch %>
+  <h5> New Requests </h5>
+  <% @pending_requests.each do |request| %>
+    <%# wrap this is some styling to make cards %>
+    <p> *** Image Placeholder *** </p>
+    <h3> <%= request.requester.children.first.first_name %> </h3>
+    <h4> <%= request.requester.first_name %> </h4>
+  <% end %>
 </div>
 
+Message-notification Boxes
+<div>
+  <h5> Messages </h5>   
+  
+  <p> *** Image Placeholder *** </p>
+  <h3> <%= @messages.user_id.children.first.first_name %> </h3>
+  <h4> <%= @messages.user.user_id %> </h4>
+  
+</div>
