--- a/app/assets/stylesheets/components/_basics.scss
+++ b/app/assets/stylesheets/components/_basics.scss
@@ -7,6 +7,10 @@
   background-color: rgb(97, 181, 241);
 }
 
+.blue_10 {
+  background-color: rgba(97, 181, 241, 0.1);
+}
+
 .green {
   background-color: rgb(112, 200, 168);
 }
