--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -21,6 +21,17 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .child-background {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: aqua;
-  
+}
+
+.card {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.card_about {
+  border-radius: 10px;
+  padding: 1px;
+  flex: 10;
+  display: flex;
+  flex-direction: column;
 }
