--- a/app/views/children/index.html.erb
+++ b/app/views/children/index.html.erb
@@ -10,13 +10,37 @@
   </div>
 </div>
 
-<div class="card flex-row card-background p-2 m-1">
-  <img id="profile-picture" src="https://media.istockphoto.com/id/1268675353/photo/portrait-of-cute-little-girl-outdoors.jpg?s=612x612&w=0&k=20&c=7q3OKwR4BnYsf2Pflz0hnzLfEdgEz4D8d9rUzIQscqE=" alt="profile_picture" width="150" height="150">
-  <% @children.each do |child| %>
-      <div><%= child.name %></div>
-      <div><%= child.age %></div>
-      <div><%= child.gender %></div>
-      <div><%= child.about %></div>
-  <% end %>
-</div>
+<div>
 
+  <div>
+    <% @children.each do |child| %>
+    <div class=" card-background p-2 m-1">
+
+    <div class="row">
+
+      <div class="col">
+       <img id="profile-picture" src="https://media.istockphoto.com/id/1268675353/photo/portrait-of-cute-little-girl-outdoors.jpg?s=612x612&w=0&k=20&c=7q3OKwR4BnYsf2Pflz0hnzLfEdgEz4D8d9rUzIQscqE=" alt="profile_picture" width="150" height="150">
+      </div>
+
+      <div class="col">
+       <div class=" comic-neue-regular"><%= child.first_name %></div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <div class=" comic-neue-regular"><%= child.age %></div>
+      </div>
+            <div class="col">
+              <div class=" comic-neue-regular"><%= child.gender %></div>
+      </div>
+    </div>
+
+    <div class="row">
+     <div class=" card_about comic-neue-regular"><%= child.about %></div>
+    </div>
+
+    </div>
+    <% end %>
+  </div>
+</div>
