--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,73 +1,7 @@
 <div>
   <img class="profile_img" src="" alt="profile_picture">
 
-  <p class="comic-neue-regular profile_about">About Parent:</p>
-  <div class="drop_downs">
-    <div class="single_drop_down">
-        <%= simple_form_for(current_user, url: profile_path) do |f| %>
-        <%= f.input :age, prompt: "Select Age" %>
-    </div>
-
-    <div class="single_drop_down">
-        <%= f.input :gender, collection: ["Boy", "Girl", "Prefer not to say"], prompt: "Select Gender" %>
-        <%= f.button :submit, "Save Profile" %>
-      <% end %>
-    </div>
-  </div>
-
-<%# update the current user with the params %>
-
   <p class="comic-neue-regular profile_about">About Child:</p>
-  <div class="descriptions characteristics">
-    <input class="tag-selector" type="checkbox" id="active"/>
-    <label for="active">Active</label>
-
-    <input class="tag-selector" type="checkbox" id="calm"/>
-    <label for="calm">Calm</label>
-
-    <input class="tag-selector" type="checkbox" id="energetic"/>
-    <label for="energetic">Energetic</label>
-
-    <input class="tag-selector" type="checkbox" id="peaceful"/>
-    <label for="peaceful">Peaceful</label>
-
-    <input class="tag-selector" type="checkbox" id="outgoing"/>
-    <label for="outgoing">Outgoing</label>
-
-    <input class="tag-selector" type="checkbox" id="shy"/>
-    <label for="shy">Shy</label>
-
-    <input class="tag-selector" type="checkbox" id="chaotic"/>
-    <label for="chaotic">Chaotic</label>
-
-    <input class="tag-selector" type="checkbox" id="orderly"/>
-    <label for="orderly">Orderly</label>
-  </div>
-
-  <p class="comic-neue-regular profile_about">Preferences:</p>
-  <div class="preferences characteristics">
-    <input class="tag-selector" type="checkbox" id="active2"/>
-    <label for="active2">Active</label>
-
-    <input class="tag-selector" type="checkbox" id="calm2"/>
-    <label for="calm2">Calm</label>
-
-    <input class="tag-selector" type="checkbox" id="energetic2"/>
-    <label for="energetic2">Energetic</label>
-
-    <input class="tag-selector" type="checkbox" id="peaceful2"/>
-    <label for="peaceful2">Peaceful</label>
-
-    <input class="tag-selector" type="checkbox" id="outgoing2"/>
-    <label for="outgoing2">Outgoing</label>
-
-    <input class="tag-selector" type="checkbox" id="shy2"/>
-    <label for="shy2">Shy</label>
-
-    <input class="tag-selector" type="checkbox" id="chaotic2"/>
-    <label for="chaotic2">Chaotic</label>
-
-    <input class="tag-selector" type="checkbox" id="orderly2"/>
-    <label for="orderly2">Orderly</label>
-  </div>
+  <%= render 'children/form', child: @child %>
+  
 </div>
