--- a/app/assets/stylesheets/pages/_children.scss
+++ b/app/assets/stylesheets/pages/_children.scss
@@ -38,6 +38,7 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   margin: 5px;
+  margin-top: 50px;
 }
 
 .category_buttons {
@@ -68,12 +69,16 @@ a {
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin: 5px;
+  font-weight: bold;
+  font-family: "Comic Neue", cursive;
 }
 
 .age_and_gender {
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin: 5px;
+  font-weight: bold;
+  font-family: "Comic Neue", cursive;
 }
 
 .child_card_boxes {
@@ -91,7 +96,7 @@ a {
   border-color: rgb(97, 181, 241);
   height: 110px;
   width: 110px;
-  border-radius: 50%;
+  border-radius: 50px;
   margin-left: 30px;
 }
 
@@ -99,4 +104,64 @@ a {
   font-size: 40px;
   font-weight: bold;
   padding-top: 15px;
+}
+
+.foto_fit {
+  overflow: hidden;
+  position: relative;
+}
+.foto_fit img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50px;
+}
+
+.back-button {
+  font-family: "Comic Neue", cursive;
+  font-size: large;
+  margin-top: 20px;
+  margin-left: 20px;
+  font-weight: bold;
+}
+
+.about_show_page {
+  font-family: "Comic Neue", cursive;
+  margin-top: 20px;
+  margin-left: 20px;
+  font-weight: bold;
+  font-size:  large;
+  text-align: center;
+}
+
+.about_us {
+  border-radius: 15px;
+  border: 4px solid;
+  border-color: rgb(97, 181, 241);
+  background-color: white;
+  text-align: left;
+  display: flex;
+  width: 375px;
+  margin: 10px;
+  height: 200px;
+  padding: 16px;
+  font-family: "Comic Neue", cursive;
+}
+
+.button1 {
+  background-color: rgb(238, 199, 72);
+  border-radius: 15px;
+  margin-left: 10px;
+  font-family: "Comic Neue", cursive;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.button2 {
+background-color: rgb(189, 234, 189);
+  border-radius: 15px;
+  margin-left: 150px;
+  font-family: "Comic Neue", cursive;
+  padding-left: 10px;
+  padding-right: 10px;
 }
