children-index-images

--- a/app/views/children/show.html.erb
+++ b/app/views/children/show.html.erb
@@ -21,7 +21,7 @@
 
 <div>
   <p class="about_show_page">About Us </p>
-  <input class="about_us" type="text" value="<%= @parent.about %>">
+  <textarea class="about_us" ><%= @parent.about %></textarea>
 </div>
 
 <button class="button1"><%= link_to "<<Back", children_path %></button>
