--- a/app/views/children/new.html.erb
+++ b/app/views/children/new.html.erb
@@ -1,3 +1,4 @@
+<div>
   <p class="comic-neue-regular profile_about">About Child:</p>
   <div class="descriptions characteristics">
     <input class="tag-selector" type="checkbox" id="active"/>
