--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -48,20 +48,29 @@
   border-radius: 10px;
   padding: 10px 25px;
   background-color: rgba(249, 220, 90, 0.3);
-  color: rgb(80, 83, 84);
-  margin: 4px 4px 4px 4px;
+  color: rgb(80, 83, 84) !important;
+  margin: 0px 4px 4px 4px;
   text-align: center;
 }
 
 .tag-selector:checked + label {
   background-color: rgba(249, 220, 90, 0.8);
-  color: black;
+  color: black !important;
 }
 
-.characteristics {
+.characteristics fieldset {
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin: 15px;
+  gap: 8px;
+
+  label {
+    width: 100%;
+  }
+
+  legend {
+    display: none;
+  }
 }
 
 .profile_about {
@@ -72,10 +81,6 @@
   margin-bottom: -10px;
 }
 
-.gender_button {
-  color: yellow;
-}
-
 .drop_downs {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -84,4 +89,80 @@
 
 .single_drop_down {
   margin: 5px;
+}
+
+.is-valid {
+  border-color: rgba(249, 220, 90, 0.8) !important;
+  border: 4px solid;
+  background-color: white;
+  border-radius: 15px;
+}
+
+.optional {
+  font-family: "Comic Neue", cursive;
+  font-weight: 400;
+  font-style: normal;
+  color: black;
+}
+
+.about {
+  margin: 0px 10px 0px 10px;
+}
+
+.submit {
+  font-family: "Comic Neue", cursive;
+  font-weight: 400;
+  font-style: normal;
+  color: rgb(80, 83, 84);
+  border: 4px solid;
+  border-color: rgba(249, 220, 90, 0.8);
+  background-color: rgba(249, 220, 90, 0.2);
+  margin: 0px 20px;
+  border-radius: 15px;
+}
+
+.text {
+  text-align: center;
+}
+
+#child_about {
+  padding: 35px 36px 35px 10px;
+}
+
+.profile_all {
+  padding: 10px 10px 10px 5px;
+}
+
+.profile_img {
+  height: 140px;
+  border-radius: 100px;
+  border: 5px solid rgb(249, 220, 90);
+  margin: -10px auto;
+  display: block;
+
+}
+
+.profile_img_child_name {
+  text-align: center;
+  font-size: 50px;
+  padding-top: 10px;
+  margin-bottom: -20px;
+}
+
+.profile_img_parent_name {
+  text-align: center;
+  font-size: 20px;
+}
+
+.about_parent {
+  border: 5px solid rgba(249, 220, 90, 0.8);
+  border-radius: 15px;
+  text-align: center;
+  padding: 8px 25px;
+  margin: 10px;
+}
+
+.two_in_one_row {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
