--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,7 +1,26 @@
-<div>
-  <img class="profile_img" src="" alt="profile_picture">
+<div class="profile_all">
+  <%= image_tag current_user.child.image_url, class: "profile_img" %>
+  <div class="profile_img_child_name luckiest-guy-regular">
+    <%= current_user.child.first_name %>
+  </div>
+
+  <div class="profile_img_parent_name comic-neue-regular">
+    <%= current_user.first_name %>
+    <%= current_user.last_name %>
+  </div>
+
+  <p class="comic-neue-regular profile_about">About Parent:</p>
+
+  <div class="two_in_one_row">
+    <div class="about_parent">
+      <%= current_user.age %>
+    </div>
+    <div class="about_parent">
+      <%= current_user.gender%>
+    </div>
+  </div>
 
   <p class="comic-neue-regular profile_about">About Child:</p>
   <%= render 'children/form', child: @child %>
-  
+
 </div>
