--- a/app/views/children/index.html.erb
+++ b/app/views/children/index.html.erb
@@ -19,11 +19,11 @@
   </div>
 
   <div>
-  <a class="category_buttons">Favourites</a>
+  <a class="category_buttons">Liked Playgrounds</a>
   </div>
 
   <div>
-  <a class="category_buttons">Preferences</a>
+  <a class="category_buttons">Filter</a>
   </div>
 </div>
 
@@ -34,7 +34,7 @@
 
       <div class="image_and_name foto_fit">
         <%= image_tag child.image_url %>
-        <p class="child_card_boxes child_name"><%= link_to child.first_name, child_path(child)%></p>
+        <p class="child_card_boxes child_name luckiest-guy-regular"><%= link_to child.first_name, child_path(child)%></p>
       </div>
 
       <div class="age_and_gender">
