--- a/app/views/children/show.html.erb
+++ b/app/views/children/show.html.erb
@@ -4,25 +4,34 @@
 
 <div class="child_card image_and_name foto_fit">
   <%= image_tag @child.image_url %>
-  <p class="child_card_boxes child_name"><%= @child.first_name %></p>
+  <p class="child_card_boxes child_name luckiest-guy-regular"><%= @child.first_name %></p>
 </div>
 
-<p class="about_show_page">About <%= @parent.first_name %></p>
-  <div class="child_card age_and_gender">
-          <p class="child_card_boxes"><%= @parent.age %></p>
-          <p class="child_card_boxes"><%= @parent.gender %></p>
-  </div>
+<div class="overall_card">
+    <p class="about_show_page">About <%= @parent.first_name %></p>
+    <div class="child_card age_and_gender">
+            <p class="child_card_boxes"><%= @parent.age %></p>
+            <p class="child_card_boxes"><%= @parent.gender %></p>
+    </div>
 
-<p class="about_show_page">About <%= @child.first_name %></p>
-  <div class="child_card age_and_gender">
-    <p class="child_card_boxes"><%= @child.age %></p>
-    <p class="child_card_boxes"><%= @child.gender %></p>
+  <p class="about_show_page">About <%= @child.first_name %></p>
+    <div class="child_card age_and_gender">
+      <p class="child_card_boxes"><%= @child.age %></p>
+      <p class="child_card_boxes"><%= @child.gender %></p>
+
+      <% @child.self_characteristics.each do |characteristic| %>
+        <p class="child_card_boxes"><%= characteristic.name %></p>
+      <% end %>
+    </div>
+  <div>
+    <p class="about_show_page">About Us </p>
+    <textarea class="about_us" ><%= @parent.about %></textarea>
   </div>
+</div>
 
 <div>
-  <p class="about_show_page">About Us </p>
-  <textarea class="about_us" ><%= @parent.about %></textarea>
+  <button class="button1"><%= link_to "<<Back", children_path %></button>
 </div>
-
-<button class="button1"><%= link_to "<<Back", children_path %></button>
-<button class="button2"><%= link_to "send request>>", children_path %></button>
+<div>
+  <button class="button2"><%= link_to "Send Request>>", children_path %></button>
+</div>
