--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,41 +1,47 @@
+<%= current_user.email %>
 <div>
   <h5 style="margin: 20px" class="luckiest-guy-regular"> All Requests </h5> 
-  <% @pending_requests.each do |request| %>
-    <%# wrap this is some styling to make cards %>
-    <div class="chat-box">
-      <img class="user-image" src="https://th.bing.com/th/id/OIP.jaCY5SwnrEfiIe5oy_B7HwHaE8?w=244&h=180&c=7&r=0&o=5&dpr=2&pid=1.7" alt="Parent Profile Picture">
-      <div class="text-vertical-center">
-        <div>
-          <p> New Request </p>
-        </div>
+    
+    <% @pending_requests.each do |request| %>
+      <%= link_to request_path(request) do %> 
+        <div class="chat-box">
+        
+          <img class="user-image" src="https://th.bing.com/th/id/OIP.jaCY5SwnrEfiIe5oy_B7HwHaE8?w=244&h=180&c=7&r=0&o=5&dpr=2&pid=1.7" alt="Parent Profile Picture">
+          <div class="text-vertical-center">
+            <div>
+              <p> New Request </p>
+            </div>
 
-        <div> 
-          <h1 class="luckiest-guy-regular"> <%= request.requester.children.first.first_name %> </h1>
-        </div>
+            <div> 
+              <h1 class="luckiest-guy-regular"> <%= request.requester.children.first.first_name %> </h1>
+            </div>
 
-        <div>
-          <h5 class="comic-neue-regular"> <%= request.requester.first_name %> </h5>
+            <div>
+              <h5 class="comic-neue-regular"> <%= request.requester.first_name %> </h5>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-  <% end %>
+      <% end %>
+    <% end %>
 </div>
 
 <div>
   <h5 style="margin: 20px" class="luckiest-guy-regular"> All Chats </h5>   
   <% @chats.each do |chat| %>
-  <div class="notification-box">
-    <img class="user-image" src="https://th.bing.com/th/id/OIP.jaCY5SwnrEfiIe5oy_B7HwHaE8?w=244&h=180&c=7&r=0&o=5&dpr=2&pid=1.7" alt="Parent Profile Picture">
-    <%#h3> <%= chat.messages.first.content %> 
-    <div class="text-vertical-center"> 
-    
-      <div> 
-        <h1 class="luckiest-guy-regular"> <%= chat.messages.first.user.children.first.first_name %> </h1>
-      </div> 
-      <div> 
-        <h5 class="comic-neue-regular"> <%= chat.messages.first.user.first_name %> </h5>
-      </div> 
-    </div>
-  </div>
+    <%= link_to chat_path(chat) do %>
+      <div class="notification-box">
+        <img class="user-image" src="https://th.bing.com/th/id/OIP.jaCY5SwnrEfiIe5oy_B7HwHaE8?w=244&h=180&c=7&r=0&o=5&dpr=2&pid=1.7" alt="Parent Profile Picture">
+        <%#h3> <%= chat.messages.first.content %> 
+        <div class="text-vertical-center"> 
+        
+          <div> 
+            <h1 class="luckiest-guy-regular"> <%= chat.messages.first.user.children.first.first_name %> </h1>
+          </div> 
+          <div> 
+            <h5 class="comic-neue-regular"> <%= chat.messages.first.user.first_name %> </h5>
+          </div> 
+        </div>
+      </div>
+    <% end %>
   <% end %>
 </div>
