--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,3 +5,6 @@
 @import "navbar";
 @import "basics";
 @import "navbar_bottom";
+@import "messages";
+@import "request_show";
+@import "main_container";
