--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,10 +19,11 @@
   </head>
 
   <body>
-    <div class="page-container ">
+
+    <div class="page-container">
       <%= render "shared/flashes" %>
       <%= render "shared/navbar" %>
-      <%= yield %>
+      <div class="main-container"> <%= yield %> </div>
       <%= render "shared/navbar_bottom" %>
     </div>
   </body>
