--- a/app/assets/stylesheets/pages/_playgrounds.scss
+++ b/app/assets/stylesheets/pages/_playgrounds.scss
@@ -7,7 +7,7 @@
   margin: 10px auto;
 }
 
-.form-control {
+.playgrounds_input {
   border-radius: 15px;
   border: 4px solid rgb(112, 200, 168);
   text-align: center;
