--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -91,11 +91,10 @@
   margin: 5px;
 }
 
-.is-valid {
-  border-color: rgba(249, 220, 90, 0.8) !important;
-  border: 4px solid;
-  background-color: white;
-  border-radius: 15px;
+.yellow_border {
+  border: 4px solid rgba(249, 220, 90, 0.8) !important;
+  background-color: white !important;
+  border-radius: 15px !important;
 }
 
 .optional {
@@ -154,11 +153,11 @@
 }
 
 .about_parent {
-  border: 5px solid rgba(249, 220, 90, 0.8);
+  border: 5px solid rgba(249, 220, 90, 0.8) !important;
   border-radius: 15px;
   text-align: center;
-  padding: 8px 25px;
-  margin: 10px;
+  padding: 8px 25px !important;
+  margin: 10px !important;
 }
 
 .two_in_one_row {
