--- a/app/views/shared/_navbar_bottom.html.erb
+++ b/app/views/shared/_navbar_bottom.html.erb
@@ -10,13 +10,13 @@
     end
   %>
 
-<div class="navbar-bottom-box" style="<%= navbar_background %>"> 
+<div class="navbar-bottom-box" style="<%= navbar_background %>">
       <% if user_signed_in? %>
       <%= link_to "🏠", children_path, class: "navbar-bottom-menu navbar-bottom-home #{"active" if current_page?(new_user_session_path)}" %>
       <% else %>
       <%= link_to "🏠", new_user_session_path, class: "navbar-bottom-menu navbar-bottom-home #{"active" if current_page?(new_user_session_path)}" %>
     <% end %>
     <%= link_to "💬", requests_path, class: "navbar-bottom-menu #{"active" if current_page?(requests_path)}", id: "navbar-bottom-request" %>
-    <%= link_to "🗺️", root_path, class: "navbar-bottom-menu #{"active" if current_page?(root_path)}", id: "navbar-bottom-map" %>
+    <%= link_to "🗺️", playgrounds_path, class: "navbar-bottom-menu #{"active" if current_page?(playgrounds_path)}", id: "navbar-bottom-map" %>
     <%= link_to "👧🏽", profile_path, class: "navbar-bottom-menu #{"active" if current_page?(profile_path)}", id: "navbar-bottom-profile" %>
-</div> 
+</div>
