changes to navbar

--- a/app/assets/stylesheets/pages/_playgrounds.scss
+++ b/app/assets/stylesheets/pages/_playgrounds.scss
@@ -32,5 +32,5 @@
   background-color: rgba(112, 200, 168, 0.1);
   border-radius: 15px;
   padding: 10px;
-  margin: 10px;
+  margin: 0px 10px 10px 10px;
 }
