--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -8,10 +8,15 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 60px;
+  width: 30px;
 }
 
 .dropdown-item, .nav-item {
   text-align: right;
   font-family: "Comic Neue", cursive;
+}
+
+.navbar-toggler-icon {
+  width: 15px !important;
+  height: 10px !important;
 }
