--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,23 +1,30 @@
 <a href="/requests" class="button-back-navigation"><--</a>
-<h1> Heyy </h1>
+
 <div class="request-show-profile">
 <img class="user-image" src="https://th.bing.com/th/id/OIP.jaCY5SwnrEfiIe5oy_B7HwHaE8?w=244&h=180&c=7&r=0&o=5&dpr=2&pid=1.7" alt="Parent Profile Picture">
 <%= @request.requester.children.first.first_name %>
 <%= @request.requester.first_name %>
 </div>
 
-<h3> About parent: </h3>
-<p> <%= @request.requester.age %> </p>
-<p> <%= @request.requester.gender %> </p>
+<h3 class="headers-show-request"> About parent: </h3>
+<div class="two_in_one_row">
+<p class="show-requests-box"> <%= @request.requester.age %> </p>
+<p class="show-requests-box"> <%= @request.requester.gender %> </p>
+</div>
+
+<h3 class="headers-show-request"> About child: </h3>
+
+<div class="two_in_one_row">
+<p class="show-requests-box"> <%= @request.requester.children.first.age %> </p>
+<p class="show-requests-box"> <%= @request.requester.children.first.gender %> </p>
+<% @request.requester.child.self_characteristics.each do |characteristic| %>
+        <p class="show-requests-box"> <%= characteristic.name %> </p>
+      <% end %>
+</div>
+
+<h3 class="headers-show-request"> About us: </h3>
+<p class="show-requests-box"> <%= @request.requester.about %> <%= @request.requester.children.first.about %> </p>
 
 
-<h3> About child: </h3>
-<p> <%= @request.requester.children.first.age %> </p>
-<p> <%= @request.requester.children.first.gender %> </p>
-
-
-
-<h3> About us: </h3>
-
-<%= link_to "accept", accept_request_path(@request) %>
-<%= link_to "reject", reject_request_path(@request) %>
+<%= link_to "accept", accept_request_path(@request), class:"request-accept-button" %> 
+<%= link_to "reject", reject_request_path(@request), class:"request-reject-button" %> 
