the requests work now

--- a/app/views/children/show.html.erb
+++ b/app/views/children/show.html.erb
@@ -30,5 +30,5 @@
 </div>
 
 <div>
-  <button class="button2"><%= link_to "Send Request>>", requests_path %></button>
+  <%= button_to "Send Request", user_requests_path(@parent), class: "button2" %>
 </div>
