--- a/app/views/children/index.html.erb
+++ b/app/views/children/index.html.erb
@@ -17,11 +17,10 @@
 <div data-controller="toggle">
 <div class="categorys_children">
   <div>
-    <a class="category_buttons">All</a>
+   <%= link_to "All", children_path, class: "category_buttons" %>
   </div>
-
   <div>
-  <a class="category_buttons">Liked Playgrounds</a>
+  <%= link_to "Requests #{@notifications}", requests_path,  class: "category_buttons" %>
   </div>
 
   <div>
@@ -33,22 +32,23 @@
     <%= form_with url: children_path, method: :get, class: "d-flex" do %>
           <div>
             <%= select_tag :gender,
-                  options_for_select(["Gender", "boy", "girl", "prefer_not_to_say"], selected: params[:gender]),
-                  class: "form-control"
+                  options_for_select(["boy", "girl", "prefer_not_to_say"], selected: params[:gender]),
+                  class: "form-control",
+                  prompt: "Gender"
             %>
           </div>
           <div>
             <%= select_tag :min_age,
                 options_for_select(1..12, selected: params[:min_age]),
                 class: "form-control",
-                placeholder: "Min. age"
+                prompt: "Min. age"
             %>
           </div>
           <div>
             <%= select_tag :max_age,
                 options_for_select(1..12, selected: params[:max_age]),
                 class: "form-control",
-                placeholder: "Max. age"
+                prompt: "Max. age"
             %>
           </div>
           <div>
