--- a/app/assets/stylesheets/pages/_children.scss
+++ b/app/assets/stylesheets/pages/_children.scss
@@ -55,16 +55,9 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   width: 110px;
 }
 
-a {
-  text-decoration: none;
-}
-
-.child_card {
-  background-color: rgba(97, 181, 241, 0.2);
-  margin: 20px;
-  padding: 20px 10px 20px 10px;
-  border-radius: 15px;
-}
+// a {
+//   text-decoration: none !important;
+// }
 
 .image_and_name {
   display: grid;
@@ -84,9 +77,18 @@ a {
 
 .child_card_boxes {
   border-radius: 15px;
+  border: 3px solid rgb(97, 181, 241);
+  background-color: white;
+  padding: 5px;
+  text-align: center;
+  margin: 5px;
+}
+
+.child_card_boxes_full {
+  border-radius: 15px;
   border: 4px solid;
   border-color: rgb(97, 181, 241);
-  background-color: white;
+  background-color: rgb(97, 181, 241);
   padding: 5px;
   text-align: center;
   margin: 5px;
@@ -101,10 +103,25 @@ a {
   margin-left: 30px;
 }
 
-.child_name {
-  font-size: 40px;
+.child_show_name {
+  font-size: 60px;
   font-weight: bold;
   padding-top: 15px;
+  text-align: center;
+  color: white;
+    text-shadow:
+    -4px -4px 0 rgb(97, 181, 241),
+    4px -4px 0 rgb(97, 181, 241),
+    -4px  4px 0 rgb(97, 181, 241),
+    4px  4px 0 rgb(97, 181, 241);
+}
+
+.child_name {
+  font-size: 50px;
+  font-weight: bold;
+  padding-top: 15px;
+  text-align: center;
+  color:rgb(80, 83, 84);
 }
 
 .foto_fit {
@@ -116,6 +133,7 @@ a {
   height: 100%;
   object-fit: cover;
   border-radius: 50px;
+  border: 3px solid rgb(97, 181, 241);
 }
 
 .back-button {
@@ -140,42 +158,56 @@ a {
   border: 4px solid;
   border-color: rgb(97, 181, 241);
   background-color: white;
-  text-align: left;
+  text-align: center;
   display: flex;
-  width: 375px;
-  margin: 10px;
-  height: 200px;
-  padding: 16px;
+  margin: 0px 10px 0px 10px;
+  padding: 40px 20px;
   font-family: "Comic Neue", cursive;
 }
 
 .button1 {
-background-color: rgb(238, 199, 72);
-border-radius: 10px;
-font-family: "Comic Neue", cursive;
-position: relative;
-border-color: azure;
-margin-left: 10px;
+  font-family: "Comic Neue", cursive;
+  font-weight: 400;
+  font-style: normal;
+  color: rgb(80, 83, 84);
+  border: 4px solid;
+  border-color: rgb(97, 181, 241);
+  background-color: rgba(97, 181, 241, 0.2);
+  margin: 0px 20px;
+  border-radius: 15px;
+  padding: 5px 20px;
 }
 
 .button2 {
-background-color: rgb(189, 234, 189);
-border-radius: 10px;
-font-family: "Comic Neue", cursive;
-position: relative;
-left: 260px;
-border-color: azure;
+  font-family: "Comic Neue", cursive;
+  font-weight: 400;
+  font-style: normal;
+  color: rgb(80, 83, 84);
+  border: 4px solid;
+  border-color: rgb(97, 181, 241);
+  background-color: rgba(97, 181, 241, 0.2);
+  margin: 0px 20px;
+  border-radius: 15px;
+  padding: 5px 20px;
+  position: relative;
+  left: 200px;
 }
 
 .overall_card {
-background-color: rgba(97, 181, 241, 0.2);
+  background-color: rgba(97, 181, 241, 0.2);
+  border-radius: 15px;
+  margin: 10px;
+  padding: 10px;
 }
 
 .filter {
   font-family: "Comic Neue", cursive;
 }
 
-.form-control {
-  padding: 5px;
-  width: 77px;
+.child_card {
+  background-color: rgba(97, 181, 241, 0.2);
+  margin: 10px;
+  padding: 10px;
+  border-radius: 15px;
+  box-shadow: 1px 1px 1px 1px grey;
 }
