--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -153,7 +153,8 @@
 }
 
 .about_parent {
-  border: 5px solid rgba(249, 220, 90, 0.8) !important;
+  border: 4px solid rgba(249, 220, 90, 0.8) !important;
+  background-color: white;
   border-radius: 15px;
   text-align: center;
   padding: 8px 25px !important;
@@ -163,4 +164,12 @@
 .two_in_one_row {
   display: grid;
   grid-template-columns: 1fr 1fr;
+}
+
+.profile_background {
+  background-color: rgba(249, 220, 90, 0.1);
+  border-radius: 15px;
+  margin: 10px;
+  padding: 10px;
+  padding-bottom: 20px;
 }
