--- a/app/views/children/index.html.erb
+++ b/app/views/children/index.html.erb
@@ -63,22 +63,24 @@
 
 <div>
   <% @children.each do |child| %>
-    <div class="child_card comic-neue-regular">
+    <%= link_to child_path(child) do %>
+      <div class="child_card comic-neue-regular">
 
-      <div class="image_and_name foto_fit">
-        <%= image_tag child.image_url if child.image_url%>
-        <p class="child_card_boxes child_name luckiest-guy-regular"><%= link_to child.first_name, child_path(child)%></p>
+        <div class="image_and_name foto_fit">
+          <%= image_tag child.image_url if child.image_url%>
+          <p class="child_card_boxes child_name luckiest-guy-regular"><%= child.first_name %></p>
+        </div>
+
+        <div class="age_and_gender">
+          <p class="child_card_boxes"><%= child.age %></p>
+          <p class="child_card_boxes"><%= child.gender %></p>
+        </div>
+
+        <div class="child_card_boxes">
+          <p><%= child.about %></p>
+        </div>
+
       </div>
-
-      <div class="age_and_gender">
-        <p class="child_card_boxes"><%= child.age %></p>
-        <p class="child_card_boxes"><%= child.gender %></p>
-      </div>
-
-      <div class="child_card_boxes">
-        <%= child.about %>
-      </div>
-
-    </div>
+    <% end %>
   <% end %>
 </div>
