--- a/app/views/children/show.html.erb
+++ b/app/views/children/show.html.erb
@@ -2,7 +2,7 @@
   <button class="button1"><%= link_to "Back", children_path %></button>
 </div>
 
-<div class="child_card image_and_name foto_fit">
+<div class="child_card custom_shadow image_and_name foto_fit">
   <%= image_tag @child.image_url %>
   <p class="child_show_name luckiest-guy-regular"><%= @child.first_name %></p>
 </div>
