--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -9,7 +9,7 @@
     <%= current_user.last_name %>
   </div>
 
-  <div class="profile_background">
+  <div class="profile_background custom_shadow">
     <p class="comic-neue-regular profile_about">About Parent:</p>
 
     <div class="two_in_one_row">
