--- a/app/views/children/index.html.erb
+++ b/app/views/children/index.html.erb
@@ -17,7 +17,7 @@
 <div data-controller="toggle">
 <div class="categorys_children">
   <div>
-   <%= link_to "All", children_path, class: "category_buttons" %>
+    <%= link_to "All", children_path, class: "category_buttons" %>
   </div>
   <div>
   <%= link_to "Requests #{@notifications}", requests_path,  class: "category_buttons" %>
@@ -68,15 +68,15 @@
 
         <div class="image_and_name foto_fit">
           <%= image_tag child.image_url if child.image_url%>
-          <p class="child_card_boxes child_name luckiest-guy-regular"><%= child.first_name %></p>
+          <p class="child_card_boxes custom_shadow child_name luckiest-guy-regular"><%= child.first_name %></p>
         </div>
 
         <div class="age_and_gender">
-          <p class="child_card_boxes"><%= child.age %></p>
-          <p class="child_card_boxes"><%= child.gender %></p>
+          <p class="child_card_boxes custom_shadow"><%= child.age %></p>
+          <p class="child_card_boxes custom_shadow"><%= child.gender %></p>
         </div>
 
-        <div class="child_card_boxes">
+        <div class="child_card_boxes custom_shadow">
           <p><%= child.about %></p>
         </div>
 
