--- a/app/assets/stylesheets/components/_messages.scss
+++ b/app/assets/stylesheets/components/_messages.scss
@@ -1,69 +1,72 @@
-.messages {
-  background-color: #e1dbf3;
-  margin: 15px;
-  padding: 12px 16px;
-  border-radius: 16px;
-  max-width: 70%;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+.notification-box {
+  flex: 0 0 auto;
 }
 
+.chat-layout {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+  background: #F8F6FB;
+  height: calc(100vh - 75px); // adjust as needed for the actual height of .notification-box
+}
 
+.messages {
+  flex: 1 1 auto;
+  overflow-y: auto;
+  padding: 1rem;
+  margin-bottom: 35px;
+  background-color: #f8f6fb;
+  border-radius: 15px;
+}
+
+.message {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+  width: 100%;
+}
 
 .message-info {
-    opacity: 0.5;
-    text-align: center;
-    width: fit-content;
-}
-
-.message-field {
-  margin: 15px;
-}
-
-#send {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  margin-bottom: 70px;
-}
-
-.send-button {
-  border-radius: 15px;
-  border: 3px solid rgb(122, 101, 187);
-  padding: 10px;
-  background-color: rgb(122, 101, 187) ;
+  opacity: 0.5;
+  text-align: center;
 }
 
 .message-content {
-    border-radius: 1rem;
-    margin-bottom: 1rem;
-    padding: 0.5rem;
-    max-width: 70%;
-    width: fit-content;
-    word-wrap: break-word;
+  border-radius: 1rem;
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  max-width: 250px;
+  width: fit-content;
+  word-wrap: break-word;
 }
 
 .message.sent .message-content {
-    align-self: flex-end;
-    background: $blue;
-    color: $light-gray;
+  align-self: flex-end;
+  background: #B1A1E1;
+  color: #B1A1E1;
 }
 
 .message.received .message-content {
-    align-self: flex-start;
-    background: $gray-200;
+  align-self: flex-start;
+  background: #D3CCEE;
 }
 
-.button-back-navigation {
-  background-color: #e1dbf3;
-  border-radius: 15px;
-  padding: 10px;
-  margin: 15px;;
-  width: 50px;
-  height: 20px;
+.message-input {
+  flex: 0 0 auto;
+  background: white;
+  border-top: 1px solid $gray-200;
+  padding: 1rem;
+  position: fixed;
+  bottom: 60px;
+  width: 100vw;
 }
 
-.messages-box {
-  background-color: #f8f6fb;
-  margin: 15px;
-  padding: 10px;
-  border-radius: 15px;
+#new_message {
+  .form-group {
+    margin-bottom: 0;
+  }
+}
+
+.message-box {
+  max-width: 250px;
 }
