--- a/app/assets/stylesheets/pages/_children.scss
+++ b/app/assets/stylesheets/pages/_children.scss
@@ -202,6 +202,7 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 .filter {
   font-family: "Comic Neue", cursive;
+  margin: 15px;
 }
 
 .child_card {
@@ -209,4 +210,53 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 10px;
   padding: 10px;
   border-radius: 15px;
+}
+
+// FILTER CSS
+
+.filter_age_row {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 5px;
+}
+
+.filter_single {
+  border: 3px solid rgb(97, 181, 241);
+  border-radius: 15px;
+  background-color: rgba(97, 181, 241, 0.2);
+  margin-top: 10px;
+  width: 100%;
+  text-align: center;
+}
+
+.filter_btn {
+  font-family: "Comic Neue", cursive;
+  font-style: normal;
+  font-weight: bold;
+  color: rgb(80, 83, 84);
+  border: 4px solid;
+  border-color: rgb(97, 181, 241);
+  background-color: rgb(97, 181, 241);
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 15px;
+}
+
+.filter_preference {
+  // position: absolute;
+  // transform: scale(0);
+  // cursor: pointer;
+  border: 3px solid rgb(97, 181, 241);
+  background-color: rgba(97, 181, 241, 0.2);
+  padding: 5px;
+  border-radius: 15px;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.filter_form {
+  margin: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
